// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canonical Topic Page A11y I can see the skip to content link 1`] = `"Waka go wetin de inside"`;

exports[`Canonical Topic Page Analytics ATI 1`] = `"<img height=\\"1px\\" width=\\"1px\\" alt=\\"\\" style=\\"position:absolute\\" src=\\"https://logws1363.ati-host.net?s=598343&amp;s2=70&amp;p=pidgin.topics.c95y35941vrt.page&amp;x1=[urn%3Abbc%3Atipo%3Atopic%3Ac95y35941vrt]&amp;x2=[responsive]&amp;x3=[news-pidgin]&amp;x4=[pcm]&amp;x7=[index-category]&amp;x8=[simorgh-nojs]&amp;x9=[Donald%2520Trump]\\"/>"`;

exports[`Canonical Topic Page Footer Anchors should match text and url 1`] = `
Object {
  "text": "BBC News, Pidgin",
  "url": "/pidgin",
}
`;

exports[`Canonical Topic Page Footer Anchors should match text and url 2`] = `
Object {
  "text": "Why you fit trust BBC News",
  "url": "https://www.bbc.com/pidgin/institutional-48528766",
}
`;

exports[`Canonical Topic Page Footer Anchors should match text and url 3`] = `
Object {
  "text": "How dem dey take use am",
  "url": "https://www.bbc.co.uk/usingthebbc/terms/",
}
`;

exports[`Canonical Topic Page Footer Anchors should match text and url 4`] = `
Object {
  "text": "As e concern BBC",
  "url": "https://www.bbc.co.uk/aboutthebbc",
}
`;

exports[`Canonical Topic Page Footer Anchors should match text and url 5`] = `
Object {
  "text": "Privacy Policy",
  "url": "https://www.bbc.co.uk/usingthebbc/privacy/",
}
`;

exports[`Canonical Topic Page Footer Anchors should match text and url 6`] = `
Object {
  "text": "Cookies",
  "url": "https://www.bbc.co.uk/usingthebbc/cookies/",
}
`;

exports[`Canonical Topic Page Footer Anchors should match text and url 7`] = `
Object {
  "text": "Call BBC",
  "url": "https://www.bbc.co.uk/pidgin/send/u50853577",
}
`;

exports[`Canonical Topic Page Footer Anchors should match text and url 8`] = `
Object {
  "text": "De way wey we de take go external link.",
  "url": "https://www.bbc.co.uk/editorialguidelines/guidance/feeds-and-links",
}
`;

exports[`Canonical Topic Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/pidgin"`;

exports[`Canonical Topic Page Footer I can see the footer copyright and external linking text 1`] = `"© 2023 BBC. De external site no concern BBC. De way wey we de take go external link."`;

exports[`Canonical Topic Page Header I can see the branding 1`] = `"BBC News, Pidgin"`;

exports[`Canonical Topic Page Header Navigation link should match text and url 1`] = `
Object {
  "text": "Home",
  "url": "/pidgin",
}
`;

exports[`Canonical Topic Page Header Navigation link should match text and url 2`] = `
Object {
  "text": "Nigeria",
  "url": "/pidgin/topics/c2dwqd1zr92t",
}
`;

exports[`Canonical Topic Page Header Navigation link should match text and url 3`] = `
Object {
  "text": "Africa",
  "url": "/pidgin/topics/c404v061z85t",
}
`;

exports[`Canonical Topic Page Header Navigation link should match text and url 4`] = `
Object {
  "text": "World",
  "url": "/pidgin/topics/c0823e52dd0t",
}
`;

exports[`Canonical Topic Page Header Navigation link should match text and url 5`] = `
Object {
  "text": "Video",
  "url": "/pidgin/topics/c3l19z3k1ert",
}
`;

exports[`Canonical Topic Page Header Navigation link should match text and url 6`] = `
Object {
  "text": "Sport",
  "url": "/pidgin/topics/cjgn7gv77vrt",
}
`;

exports[`Canonical Topic Page Header Navigation link should match text and url 7`] = `
Object {
  "text": "Entertainment",
  "url": "/pidgin/topics/cqywjyzk2vyt",
}
`;

exports[`Canonical Topic Page Header Navigation link should match text and url 8`] = `
Object {
  "text": "Most popular",
  "url": "/pidgin/popular/read",
}
`;

exports[`Canonical Topic Page Main heading should match text 1`] = `"Donald Trump"`;

exports[`Canonical Topic Page SEO Apple Touch Icon should match attributes 1`] = `
Object {
  "sizes": null,
  "url": "http://localhost:7080/pidgin/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Topic Page SEO Apple Touch Icon should match attributes 2`] = `
Object {
  "sizes": "72x72",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pidgin/images/icons/icon-72x72.png",
}
`;

exports[`Canonical Topic Page SEO Apple Touch Icon should match attributes 3`] = `
Object {
  "sizes": "96x96",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pidgin/images/icons/icon-96x96.png",
}
`;

exports[`Canonical Topic Page SEO Apple Touch Icon should match attributes 4`] = `
Object {
  "sizes": "128x128",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pidgin/images/icons/icon-128x128.png",
}
`;

exports[`Canonical Topic Page SEO Apple Touch Icon should match attributes 5`] = `
Object {
  "sizes": "144x144",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pidgin/images/icons/icon-144x144.png",
}
`;

exports[`Canonical Topic Page SEO Apple Touch Icon should match attributes 6`] = `
Object {
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pidgin/images/icons/icon-152x152.png",
}
`;

exports[`Canonical Topic Page SEO Apple Touch Icon should match attributes 7`] = `
Object {
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pidgin/images/icons/icon-180x180.png",
}
`;

exports[`Canonical Topic Page SEO Apple Touch Icon should match attributes 8`] = `
Object {
  "sizes": "192x192",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pidgin/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Topic Page SEO Apple Touch Icon should match attributes 9`] = `
Object {
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pidgin/images/icons/icon-384x384.png",
}
`;

exports[`Canonical Topic Page SEO Apple Touch Icon should match attributes 10`] = `
Object {
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pidgin/images/icons/icon-512x512.png",
}
`;

exports[`Canonical Topic Page SEO Canonical link 1`] = `"http://localhost:7080/pidgin/topics/c95y35941vrt"`;

exports[`Canonical Topic Page SEO Dir attribute 1`] = `"ltr"`;

exports[`Canonical Topic Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical Topic Page SEO Heading level 1 1`] = `"Donald Trump"`;

exports[`Canonical Topic Page SEO Lang attribute 1`] = `"pcm"`;

exports[`Canonical Topic Page SEO Linked data should match text 1`] = `
Object {
  "@context": "http://schema.org",
  "@graph": Array [
    Object {
      "@type": "CollectionPage",
      "headline": "Donald Trump",
      "image": Object {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/pidgin.png",
        "width": 1024,
      },
      "inLanguage": Object {
        "@type": "Language",
        "alternateName": "pcm",
        "name": "Nigerian Pidgin",
      },
      "mainEntityOfPage": Object {
        "@id": "http://localhost:7080/pidgin/topics/c95y35941vrt",
        "@type": "WebPage",
        "name": "Donald Trump",
      },
      "publisher": Object {
        "@type": "NewsMediaOrganization",
        "logo": Object {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/pidgin.png",
          "width": 1024,
        },
        "name": "BBC News Pidgin",
        "publishingPrinciples": "https://www.bbc.com/pidgin/institutional-48528766",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/pidgin.png",
      "url": "http://localhost:7080/pidgin/topics/c95y35941vrt",
    },
    Object {
      "@type": "ItemList",
      "itemListElement": Array [
        Object {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 1,
          "url": "https://www.bbc.com/pidgin/articles/c97dqy49r6mo",
        },
        Object {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 2,
          "url": "https://www.bbc.com/pidgin/articles/cgr1873031po",
        },
        Object {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 3,
          "url": "https://www.bbc.com/pidgin/articles/cl70nnzwygno",
        },
        Object {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 4,
          "url": "https://www.bbc.com/pidgin/articles/c108qmg34lno",
        },
        Object {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 5,
          "url": "https://www.bbc.com/pidgin/articles/c3grn1vp22no",
        },
        Object {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 6,
          "url": "https://www.bbc.com/pidgin/articles/ce42l3rxzz5o",
        },
        Object {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 7,
          "url": "https://www.bbc.com/pidgin/articles/c84ejj0v3lwo",
        },
        Object {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 8,
          "url": "https://www.bbc.com/pidgin/articles/c991v2gxx7lo",
        },
        Object {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 9,
          "url": "https://www.bbc.com/pidgin/articles/c6p9rxv3wedo",
        },
        Object {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 10,
          "url": "https://www.bbc.com/pidgin/articles/c84pdy202y0o",
        },
        Object {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 11,
          "url": "https://www.bbc.com/pidgin/articles/cz9y7g91kg9o",
        },
        Object {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 12,
          "url": "https://www.bbc.com/pidgin/articles/cg6vzwlz0wlo",
        },
        Object {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 13,
          "url": "https://www.bbc.com/pidgin/articles/cd15jkr6pzzo",
        },
        Object {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 14,
          "url": "https://www.bbc.com/pidgin/articles/cd1lk2nmpxro",
        },
        Object {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 15,
          "url": "https://www.bbc.com/pidgin/articles/cz91pzy45qqo",
        },
        Object {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 16,
          "url": "https://www.bbc.com/pidgin/articles/c72qkxlzq1vo",
        },
        Object {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 17,
          "url": "https://www.bbc.com/pidgin/articles/cqvgq9wq991o",
        },
        Object {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 18,
          "url": "https://www.bbc.com/pidgin/world-62174669",
        },
        Object {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 19,
          "url": "https://www.bbc.com/pidgin/world-62174668",
        },
        Object {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 20,
          "url": "https://www.bbc.com/pidgin/articles/cj5r8vvzpljo",
        },
        Object {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 21,
          "url": "https://www.bbc.com/pidgin/world-60465144",
        },
        Object {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 22,
          "url": "https://www.bbc.com/pidgin/tori-59901959",
        },
        Object {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 23,
          "url": "https://www.bbc.com/pidgin/tori-57396574",
        },
        Object {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 24,
          "url": "https://www.bbc.com/pidgin/tori-56991816",
        },
      ],
      "name": "BBC News Pidgin",
      "numberOfItems": 24,
    },
  ],
}
`;

exports[`Canonical Topic Page SEO OG description 1`] = `"Description of Donald Trump topic page"`;

exports[`Canonical Topic Page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/pidgin.png"`;

exports[`Canonical Topic Page SEO OG image alt 1`] = `"BBC News Pidgin"`;

exports[`Canonical Topic Page SEO OG locale 1`] = `"pcm"`;

exports[`Canonical Topic Page SEO OG site name 1`] = `"BBC News Pidgin"`;

exports[`Canonical Topic Page SEO OG title 1`] = `"Donald Trump - BBC News Pidgin"`;

exports[`Canonical Topic Page SEO OG type 1`] = `"website"`;

exports[`Canonical Topic Page SEO OG url 1`] = `"http://localhost:7080/pidgin/topics/c95y35941vrt"`;

exports[`Canonical Topic Page SEO Page title 1`] = `"Donald Trump - BBC News Pidgin"`;

exports[`Canonical Topic Page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`Canonical Topic Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical Topic Page SEO Twitter creator 1`] = `"@BBCNews"`;

exports[`Canonical Topic Page SEO Twitter description 1`] = `"Description of Donald Trump topic page"`;

exports[`Canonical Topic Page SEO Twitter image alt 1`] = `"BBC News Pidgin"`;

exports[`Canonical Topic Page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/pidgin.png"`;

exports[`Canonical Topic Page SEO Twitter site 1`] = `"@BBCNews"`;

exports[`Canonical Topic Page SEO Twitter title 1`] = `"Donald Trump - BBC News Pidgin"`;
